<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_theme"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ToggleButton
        android:id="@+id/black_theme"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:textColor="@color/text"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="15sp"
        android:layout_marginTop="20dp"/>

    <Switch
        android:id="@+id/magic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/magic"
        android:textColor="@color/text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloFriend"
        android:textColor="@color/text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="@color/text"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/yellow"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:textColor="@color/yellow"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/red"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/blue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:textColor="@color/blue"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/check"
        android:textColor="@color/text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/comment"
        android:textColor="@color/text"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/input_user_text" />

</LinearLayout>