<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/linearlayout_edit_text_elements">

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="@color/heading"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/person_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/person_data"
        android:textColor="@color/heading_2level"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/surname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/surname_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/patronymic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/patronymic"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/patronymic_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/birthday"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/date_birthday"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthday_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/safety"
        android:textColor="@color/heading_2level"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/questions"
        android:textColor="@color/heading_2level"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>


</LinearLayout>